v2.17.3 - xx xxx xxxx
---------------------

v2.17.2 - 15 Jun 2022
---------------------
   - Bug fixes
   - DPDK:
     * OVS validated with DPDK 21.11.1.  It is recommended to use this version
       until further releases.

v2.17.1 - 08 Apr 2022
---------------------
   - Bug fixes
   - libopenvswitch API change:
     * To fix the Undefined Behavior issue causing the compiler to incorrectly
       optimize important parts of code, container iteration macros (e.g.,
       LIST_FOR_EACH) have been re-implemented in a UB-safe way.
     * Backwards compatibility has mostly been preserved, however the
       user-provided pointer is now set to NULL after the loop (unless it
       exited via "break;")
     * Users of libopenvswitch will need to double-check the use of such loop
       macros before compiling with a new version.
     * Since the change is limited to the definitions within the headers, the
       ABI is not affected.

v2.17.0 - 17 Feb 2022
---------------------
   - Userspace datapath:
     * Optimized flow lookups for datapath flows with simple match criteria.
       See 'Simple Match Lookup' in Documentation/topics/dpdk/bridge.rst.
     * New per-interface configuration knob 'other_config:tx-steering'.  If set
       to 'hash', enables hash-based Tx packet steering mode to utilize all the
       Tx queues of the interface regardles of the number of PMD threads.
     * Removed experimental tag for PMD Auto Load Balance.
     * New configuration knob 'other_config:n-offload-threads' to change the
       number of HW offloading threads.
   - DPDK:
     * EAL argument --socket-mem is no longer configured by default upon
       start-up.  If dpdk-socket-mem and dpdk-alloc-mem are not specified,
       DPDK defaults will be used.
     * EAL argument --socket-limit no longer takes on the value of --socket-mem
       by default.  'other_config:dpdk-socket-limit' can be set equal to
       the 'other_config:dpdk-socket-mem' to preserve the legacy memory